--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="flex justify-center items-center gap-7">
             <div class="flex justify-center items-center gap-3 w-[123px] h-[52px] p-3 rounded-[50px] bg-[#41ff6b1a]"><span class="font-extrabold text-2xl" id="hearts">0</span><img class="w-12 h-12" src="./assets/heart.png" alt=""></div>
-            <div class="flex justify-center items-center gap-3 w-[123px] h-[52px] p-3 rounded-[50px] bg-[#41ff6b1a]"><span class="font-extrabold text-2xl" id="coins">40</span><img class="w-12 h-12" src="./assets/coin.png" alt=""></div>
+            <div class="flex justify-center items-center gap-3 w-[123px] h-[52px] p-3 rounded-[50px] bg-[#41ff6b1a]"><span class="font-extrabold text-2xl" id="coins">20</span><img class="w-12 h-12" src="./assets/coin.png" alt=""></div>
             <div class="flex justify-center items-center gap-3 w-[123px] h-[52px] p-3 rounded-[50px] bg-[#00A63E] text-white font-bold text-xl"><span id="copy-here">0</span><span>Copy</span></div>
         </div>
     </section>
@@ -37,43 +37,43 @@
         <div class=" w-[436px] h-[360px]  bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img src="./assets/emergency.png" alt="">
-               <button><i class="fa-regular fa-heart heart-btn"></i></button>
+               <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">National Emergency Service</h1>
                 <p class="text-xl text-[#5C5C5C]">National Emergency</p>
                 <h2 class="mt-3 font-bold text-xl number">999</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class="h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white"></i>  Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class="h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button  hover:bg-black"><i class="fa-solid fa-phone text-white"></i>  Call</button>
             </div>
         </div>
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/police.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">Police Helpline Service</h1>
                 <p class="text-xl text-[#5C5C5C]">Police</p>
                 <h2 class="mt-3 font-bold text-xl number">999</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[70px] py-[6px] px-[12px] my-6 text-white">Police</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button hover:bg-black"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
             </div>
         </div>
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/fire-service.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">Fire Service Helpline</h1>
                 <p class="text-xl text-[#5C5C5C]">Fire Service</p>
                 <h2 class="mt-3 font-bold text-xl number">999</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">Fire</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button  hover:bg-black"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
             </div>
         </div>
 
@@ -84,106 +84,102 @@
 
 
         <!-- Call History -->
-        <div class=" bg-[#FFFFFF] p-8 row-span-3" id="call-history">
-           <div class="flex justify-between items-center my-[15px]">
-             <div class="font-bold">
-                <h1><i class="fa-regular fa-clock "></i>  Call History</h1>
-              </div>
-              <div>
-                <button class="w-[114px] h-[40px] rounded-3xl text-white p-2 bg-[#00A63E]">Clear</button>
-            </div>
-           </div>
-                        <div>
-                              <h1></h1>
-                        </div>
-        </div>
-
-
+            <div class=" bg-[#FFFFFF] p-8 row-span-3" id="call-history">
+              <div class="flex justify-between items-center my-[15px]">
+                <div class="font-bold">
+                    <h1><i class="fa-regular fa-clock "></i>  Call History</h1>
+                    </div>
+                    <div>
+                       <button class="w-[114px] h-[40px] rounded-3xl text-white p-2 bg-[#00A63E] hover:bg-slate-400" id="clear-history">Clear</button>
+                </div>
+                </div>
+            <ul id="call-history-list" class="list-disc ml-5 space-y-2 text-gray-800"></ul>
+             </div>
 
 
 
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/ambulance.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">Ambulance Service</h1>
                 <p class="text-xl text-[#5C5C5C]">Ambulance</p>
                 <h2 class="mt-3 font-bold text-xl number">1994-999999</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[70px] py-[6px] px-[12px] my-6 text-white">Health</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button hover:bg-black"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
             </div>
         </div>
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/women.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">Women & Child Helpline</h1>
                 <p class="text-xl text-[#5C5C5C]">Women & Child Helpline</p>
                 <h2 class="mt-3 font-bold text-xl number">109</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">Help</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button hover:bg-black"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
             </div>
         </div>
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/anti.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">Anti-Corruption Helpline</h1>
                 <p class="text-xl text-[#5C5C5C]">Anti-Corruption</p>
                 <h2 class="mt-3 font-bold text-xl number">106</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[60px] py-[6px] px-[12px] my-6 text-white">Govt.</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button hover:bg-black"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
             </div>
         </div>
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/electricity2.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">Electricity Helpline</h1>
                 <p class="text-xl text-[#5C5C5C]">National Emergency</p>
                 <h2 class="mt-3 font-bold text-xl number">999</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">All</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button hover:bg-black"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
             </div>
         </div>
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/brac.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title">BRAC Helpline</h1>
                 <p class="text-xl text-[#5C5C5C]">Brac</p>
                 <h2 class="mt-3 font-bold text-xl number">16445</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] w-[53px] py-[6px] px-[12px] my-6 text-white">NGO</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button hover:bg-black"><i class="fa-solid fa-phone text-white call-button"></i>   Call</button>
             </div>
         </div>
         <div class=" w-[436px] h-[360px]   bg-[#FFFFFF] p-8 shadow-lg card">
             <div class="flex justify-between items-center">
                 <img class="w-[64px] h-[64px]" src="./assets/Bangladesh-Railway.png" alt="">
-                <button><i class="fa-regular fa-heart heart-btn"></i></button>
+                <button><i class="fa-regular fa-heart heart-btn hover:bg-red-400"></i></button>
             </div>
                 <h1 class="font-bold text-2xl mt-3 title title">Bangladesh Railway</h1>
                 <p class="text-xl text-[#5C5C5C]">Bangladesh Railway</p>
                 <h2 class="mt-3 font-bold text-xl number">163</h2>
                 <p class="rounded-3xl bg-[#5c5c5c5c] h-[37px] max-w-[70px] py-[6px] px-[12px] my-6 text-white">Travel</p>
             <div class="flex gap-2">
-                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button"><i class="fa-solid fa-phone text-white"></i>   Call</button>
+                <button class=" h-10 rounded-lg bg-[#FFFFFF] w-[50%] border-1 border-gray-400 card-btn hover:not-focus:bg-indigo-100"><i class="fa-regular fa-copy"></i>Copy</button>
+                <button class=" h-10 rounded-lg w-[50%] bg-[#00A63E] text-white p-[2px] call-button hover:bg-black"><i class="fa-solid fa-phone text-white"></i>   Call</button>
             </div>
         </div>
       </section>
